--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
               <input type="button" value="Stop Mining" id="stopMiner" class="btn mining-btn hide">
             </div>
           </div>
+          <div class="row center">
+            <div class="col s12 message-box">
+              All your minings directly goes to <a target="_blank" href="http://etn.proxpool.com"> http://etn.proxpool.com</a>. 
+              Kindly check this <a target="_blank" href="http://etn.proxpool.com"> website </a> for your mining rewards and balance.
+            </div>
+            <div class="col s12 message-box">
+              To check your balance scroll down the site, enter your electroneum address in the address bar and click "Lookup". 
+            </div>
+            <div class="col s12 message-box">
+              Your status gets updated every time once your hashes are accepted.
+            </div>
+          </div>
         </div>
       </div>
     </main>
