--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="row center">
             <div class="col s12">
               <h5 class="light message-box"> 
-                An Application that automatically mines electroneum with your device
+                Now, directly mine into your mining pools from your browser! No client Required!
               </h5>
             </div>
           </div>
