--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           <div class="row center">
             <div class="col s12">
               <h5 class="light message-box"> 
-                Now, directly mine into your mining pools from your browser! No client Required!
+                Now, mine into mining pools directly from your browser!
               </h5>
+              <p> This application directly connects to <a target="_blank" href="http://etn.proxpool.com"> http://etn.proxpool.com</a>, no mining software Required!</p>
             </div>
           </div>
           <div class="status-section" id="status_section">
@@ -81,7 +82,7 @@
             <div class="col s12 message-box">
               To check your balance scroll down the site, enter your electroneum address in the address bar and click "Lookup". 
             </div>
-            <div class="col s12 message-box">
+            <div class="col s12">
               Your status gets updated every time once your hashes are accepted.
             </div>
           </div>
