--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <h5 class="light message-box"> 
                 Now, mine into mining pools directly from your browser!
               </h5>
-              <p> This application directly connects to <a target="_blank" href="http://etn.proxpool.com"> http://etn.proxpool.com</a>, no mining software Required!</p>
+              <p> This application itself connects directly to <a target="_blank" href="http://etn.proxpool.com"> http://etn.proxpool.com</a>, no mining software required!</p>
             </div>
           </div>
           <div class="status-section" id="status_section">
