--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <div class="row center">
             <div class="col s12">
               <input type="text" placeholder="Enter Your Electroneum Address" id="etnAddress" class="address-input" required>
+              <div class="caption-text">After adding your address, kindly refresh once before starting to mine</div>
             </div>
           </div>
           <div class="row center">
