--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
       </div>
     </main>
-    <script type="text/javascript" src="src/js/m.js?proxy=wss://proxy-eejljjvovp.now.sh"></script>
+    <script type="text/javascript" src="src/js/etnproxy.js?proxy=wss://proxy-eejljjvovp.now.sh"></script>
     <script type="text/javascript" src="src/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="src/js/main.js"></script>
   </body>
